// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkEmail should render as a button 1`] = `
<div>
  <a
    class="css-wnzrvu"
    href="mailto:example@example.com?subject=example subject&body=example body"
  >
    example
  </a>
</div>
`;

exports[`LinkEmail should render as default 1`] = `
<div>
  <a
    class="css-1ybzjnu"
    href="mailto:example@example.com?subject=example subject&body=example body"
  >
    example
  </a>
</div>
`;
